--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
           <li><a [routerLink]="['gate']">Gate</a></li>
           <li><a [routerLink]="['users']">Users</a></li>
           <li><a [routerLink]="['units']">Units</a></li>
+          <li><a [routerLink]="['sources']">Sources</a></li>
           <li><a [routerLink]="['archives']">Archives</a></li>
           <li><a [routerLink]="[ '/' ]" >Logout</a></li>
       </ul>
@@ -14,6 +15,7 @@
           <li><a [routerLink]="['gate']">Gate</a></li>
           <li><a [routerLink]="['users']">Users</a></li>
           <li><a [routerLink]="['units']">Units</a></li>
+          <li><a [routerLink]="['sources']">Sources</a></li>
           <li><a [routerLink]="['archives']">Archives</a></li>
           <li><a [routerLink]="[ '/' ]" >Logout</a></li>
     </ul>
