--- a/src/app/gate/gate.component.html
+++ b/src/app/gate/gate.component.html
@@ -39,7 +39,7 @@
                     
                     <select  style="display: block"  name="unit_id">
                         <option value="" disabled selected>Источник</option>
-                        <option *ngFor="let service of services" [value]="service._id" >
+                        <option *ngFor="let source of sources" [value]="sources._id" >
                             <span class="lead__source-icon">
                                 <svg 
                                     :class=""
@@ -49,7 +49,7 @@
                                     height="20px"
                                 ><use :xlink:href="'#unit-icon-' + source.id"></use></svg>
                             </span>
-                            <span class="lead__source-title"></span>{{service.name}}</option>
+                            <span class="lead__source-title"></span>{{source.title}}</option>
                     </select>
                     
                 </div>
