--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
           <li><a [routerLink]="[ '/' ]" >Logout</a></li>
       </ul>
 
-      <ul id="nav-mobile" class="sidenav">
+      <!-- <ul id="nav-mobile" class="sidenav">
         <li><a class="" [routerLink]="[ '/' ]" >Dashboard</a></li>
           <li><a [routerLink]="['gate']">Gate</a></li>
           <li><a [routerLink]="['users']">Users</a></li>
@@ -18,9 +18,9 @@
           <li><a [routerLink]="['sources']">Sources</a></li>
           <li><a [routerLink]="['archives']">Archives</a></li>
           <li><a [routerLink]="[ '/' ]" >Logout</a></li>
-    </ul>
+    </ul> -->
 
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+      <!-- <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a> -->
 
   </div>
 </nav>
