--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="blue accent-3" role="navigation">
+<nav *ngIf="navMenu" class="blue accent-3" role="navigation">
   <div class="nav-wrapper container"><a id="logo-container" href="/" class="brand-logo">Angular CRM</a>
       <ul class="right hide-on-med-and-down">
           <li><a class="" [routerLink]="[ '/' ]" >Dashboard</a></li>
