--- a/src/assets/styles.sass
+++ b/src/assets/styles.sass
@@ -147,4 +147,11 @@ nav
     margin-bottom: 0
     height: auto
 
+.invalid_custom
+    color: red;
+    height: 100%;
+    font-size: 0.8rem;
+    cursor: text;
+    margin-top: -20px;    
+
 
