--- a/src/app/gate/gate.component.html
+++ b/src/app/gate/gate.component.html
@@ -4,6 +4,7 @@
 <div class="container">
     <div class="row">
         <div class="col s12">
+                <p *ngIf="isLead" class="">Дополнительные продажи {{addSaleCount}}</p>
             <h4 class="h4-title">Новый Лид</h4>
         </div>
     </div>
