--- a/src/app/gate/gate.component.html
+++ b/src/app/gate/gate.component.html
@@ -9,17 +9,20 @@
         </div>
     </div>
     
-    
+<form [formGroup]="form" (ngSubmit)="onSubmit()" class="col s12">
     <div class="row">
             <div class=" col s12 m6 l6">
                 <div>LeadOrTask</div>
                 <div class="flex-block">
                         <mz-radio-button-container>
                                 <input mz-radio-button
+
+                                formControlName="is_lead"
                                   [label]="'Лид'"
                                   id="is_lead-1"
                                   name="is_lead"
-                                  [(ngModel)]="isLead"
+                                  checked="checked"
+                        
                                 
                                   [value]="true"
                                   type="radio">
@@ -27,10 +30,11 @@
                             
                               <mz-radio-button-container>
                                 <input mz-radio-button
+                                formControlName="is_lead"
                                   [label]="'Задача'"
                                   id="is_lead-2"
                                   name="is_lead"
-                                  [(ngModel)]="isLead"
+                                
                                   [value]="false"
                                   type="radio">
                               </mz-radio-button-container>
@@ -39,10 +43,9 @@
                 
                 </div>
             </div>
-        </div>
+    </div>
 
     <div class="row">
-        <form [formGroup]="form" (ngSubmit)="onSubmit()" class="col s12">
 
             <div formGroupName="linkPhone" class="row">
                 <div class="col s12 m12 l6">
@@ -200,7 +203,7 @@
                 <mz-select-container>
                     <select mz-select formControlName="user_id" >
                         <option value="" selected>newLeadChoose</option>
-                        <option  >users</option>
+                        <option *ngFor="let user of users" [value]="user.id" >{{user.firstname}}</option>
                     </select>
                 </mz-select-container>
 
@@ -226,6 +229,7 @@
                 </div>
             </div>
 
-        </form>
+        
     </div>
+</form>
   </div>
