--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,22 @@
-<p>
-  dashboard works!
-</p>
+<div class="dashboard-content" id="index-banner">
+    
+    <div class="container">
+        <div class="row">
+            <owl-carousel 
+                [options]="customOptions"
+                [carouselClasses]="['owl-theme', 'sliding']"
+              >
+              <div class="item">
+                  <h4 class="center-align leads-title">Новые заявки</h4>
+              </div>
+              <div class="item">
+                  <h4 class="center-align leads-title">В работе</h4>
+              </div>
+              <div class="item">
+                  <h4 class="center-align leads-title">Выполнено</h4>
+              </div>
+          </owl-carousel>
+        </div>
+    </div>    
+
+</div>
