--- a/src/assets/styles.sass
+++ b/src/assets/styles.sass
@@ -125,6 +125,7 @@ nav
     height: 40px
     margin-top: 50px
     margin-bottom: 25px
+    text-align: center
     &__checkbox
         margin-left: 20px
         span
@@ -155,3 +156,65 @@ nav
     margin-top: -20px;    
 
 
+.clip
+    white-space: nowrap
+    overflow: hidden
+    padding: 5px
+    text-overflow: ellipsis
+    display: block
+
+.card-content__comments
+    display: flex
+    align-items: center
+
+
+.tabsNew
+    background-color: #f5f2f2;
+    position: relative;
+    overflow-x: auto;
+    overflow-y: hidden;
+    height: 48px;
+    width: 100%;
+    margin: 0 auto;
+    white-space: nowrap;
+
+.tabWrapper
+    display: inline-block;
+    text-align: center;
+    line-height: 48px;
+    height: 48px;
+    padding: 0!important;
+    margin: 0;
+    text-transform: uppercase;
+    width: 25%;
+    margin-left: auto;
+    left: auto;
+    right: auto;
+
+	
+.tabNew
+    color: rgba(238, 110, 115, 0.7);
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 0 24px;
+    font-size: 14px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    -webkit-transition: color .28s ease, background-color .28s ease;
+    transition: color .28s ease, background-color .28s ease;
+    color: black;
+    opacity: 1;
+    background-color: #f5f2f2;
+    outline: none;
+    border-bottom: 2px solid transparent;
+    &.active 
+        border-bottom: 2px solid #000
+
+.cont 
+    display: none;
+    &.active 
+        display: block
+
+.checkbox-field
+    margin: 0px        
