--- a/src/app/gate/gate.component.html
+++ b/src/app/gate/gate.component.html
@@ -111,7 +111,7 @@
             
             <div *ngIf="isLead;else isTask" class="">
                 <div class="col s12 m4 l4">
-                    <div>newLeadProcess</div>
+                    <div>Заказ оформлен?</div>
                     <div class="flex-block">                               
                     
                             <mz-radio-button-container>
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div class="col s12 m4 l4">
-                    <div>newLeadAddSale</div>
+                    <div>Доп. продажа?</div>
                     <div class="flex-block">
 
                             <mz-radio-button-container>
@@ -168,7 +168,7 @@
                     </div>
                 </div>
                 <div class=" col s12 m4 l4">
-                    <div>newLeadExpress</div>
+                    <div>Курьерская доставка?</div>
                     <div class="flex-block">
 
 
