--- a/src/assets/styles.sass
+++ b/src/assets/styles.sass
@@ -217,4 +217,7 @@ nav
         display: block
 
 .checkbox-field
-    margin: 0px        
+    margin: 0px 
+
+.preloader-background
+    z-index: 10000000 !important           
