--- a/src/app/_childComponents/navigation/navigation/navigation.component.html
+++ b/src/app/_childComponents/navigation/navigation/navigation.component.html
@@ -7,9 +7,24 @@
 
     <!-- <ul id="nav-mobile" class="sidenav">
         <li *ngFor="let item of navigation"><a class="" [routerLink]="[ item.path ]" >{{item.title}}</a></li>
-    </ul>
+    </ul> -->
 
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a> -->
+      <a id="btn-sidenav-demo" href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 
   </div>
 </nav>
+
+<mz-sidenav
+  [id]="'sidenav-demo'"
+  [collapseButtonId]="'btn-sidenav-demo'">
+  <mz-sidenav-link *ngFor="let item of navigation">
+      <a class="" [routerLink]="[ item.path ]" >{{item.title}}</a>
+  </mz-sidenav-link>
+</mz-sidenav>
+
+<!-- <mz-navbar *ngIf="navMenu" class="blue accent-3">
+  <a href="#" class="brand-logo">Angular CRM</a>
+  <mz-navbar-item-container [align]="'right'" class="nav-wrapper container">
+    <mz-navbar-item *ngFor="let item of navigation"><a class="" [routerLink]="[ item.path ]" >{{item.title}}</a></mz-navbar-item>
+  </mz-navbar-item-container>
+</mz-navbar> -->
