--- a/src/app/_childComponents/modalLead/modal-history/modal-history.component.html
+++ b/src/app/_childComponents/modalLead/modal-history/modal-history.component.html
@@ -41,24 +41,24 @@
       <div class="row">
             <form [formGroup]="form" (ngSubmit)="onSubmit()" class="col s12">
                 <div class="input-field">
-                    <select ref="status_id" v-model="status_id" name="status_id" class="no-autoinit">
-                        <option value="" disabled selected>newLeadChoose</option>
-                        <option *ngFor="let status of statuses" [value]="status.id" >
-                            {{status.title_ru}}
-                        </option>
-                    </select>
-                    <label>leadHistoryStatus</label>
+                    <mz-select-container>
+                        <select mz-select formControlName="status_id" >
+                            <option value="" selected>Статус</option>
+                            <option *ngFor="let status of statuses" [value]="status.id" >{{status.title}}</option>
+                        </select>
+                    </mz-select-container>
+                    <label>Статус</label>
                 </div>
 
                 <div class="input-field" v-if="change_authors">
                         <mz-select-container>
-                            <select mz-select formControlName="responsible_id" >
+                            <select mz-select formControlName="user_id" >
                                 <option value="" selected>newLeadChoose</option>
                                 <option *ngFor="let user of users" [value]="user.id" >{{user.firstname}}</option>
                             </select>
                         </mz-select-container>
         
-                        <label>newLeadUser</label>
+                        <label>Автор</label>
                 </div>
 
                 <div class="input-field">
@@ -70,181 +70,6 @@
                 </button>
             </form>
         </div>    
-        
-        
-        
-        
-        
-        <form [formGroup]="form" (ngSubmit)="onSubmit()" class="col s12">
-              <div class="row">
-          
-                      <div formGroupName="linkPhone" class="row">
-                          <div class="col s12 m12 l6">
-                              <mz-input-container>
-                                  <input 
-                                      mz-input
-                                      formControlName="link" 
-                                      [label]="'Ссылка'"
-                                      id="link-input"
-                                      [validate]="false"
-                                      type="text" 
-                                      [ngClass]="{'invalid': f.linkPhone.get('link').hasError('mustMatch')}"
-                                      [dataError]="f.linkPhone.get('link').hasError('mustMatch') ? 'Ссилка или телефон' : ''"
-          
-                                  >
-                              
-                              </mz-input-container>    
-                          </div>
-                          <div class="col s12 m12 l6">
-                              <mz-input-container>
-                                  <input 
-                                      mz-input
-                                      formControlName="phone"
-                                      [validate]="false"
-                                      [label]="'Телефон'"
-                                      id="phone-input"  
-                                      type="text" 
-                                      [ngClass]="{'invalid': f.linkPhone.get('phone').hasError('mustMatch')}"
-                                      [dataError]="f.linkPhone.get('phone').hasError('mustMatch') ? 'Ссилка или телефон' : ''"
-                                      
-                                  >
-                          </mz-input-container>
-                          </div>
-                      </div>
-                      <div class="row">
-                          <div class="input-field col s12 m12 l6">
-                              <mz-select-container>
-                              <select 
-                                  mz-select 
-                                  formControlName="unit_id" 
-                              >
-                                      <option value=""  selected>Подразделения</option>
-                                      <option *ngFor="let unit of units" [value]="unit.id" >{{unit.name}}</option>
-                              </select>
-                              <div class="invalid_custom" *ngIf="f.unit_id.errors  && f.unit_id.errors.required && f.unit_id.touched">Обязательно к заполнению</div>
-                              </mz-select-container>
-                          </div>
-                          <div class="input-field col s12 m12 l6">
-                              <mz-select-container>
-                              <select 
-                                  mz-select  
-                                  formControlName="source_id"
-                              
-                                   >
-                                      <option value=""  selected>Источник</option>
-                                      <option *ngFor="let source of sources" [value]="source.id" >{{source.title}}</option>
-                              </select>
-                              <div class="invalid_custom" *ngIf="f.source_id.errors  && f.source_id.errors.required && f.source_id.touched">Обязательно к заполнению</div>
-                              
-                              </mz-select-container>
-                          </div>
-                      </div>
-                      
-                      <div  class="">
-                          <div class="col s12 m4 l4">
-                              <div>Заказ оформлен?</div>
-                              <div class="flex-block">                               
-                              
-                                      <mz-radio-button-container>
-                                              <input mz-radio-button
-                                                [label]="'Нет'"
-                                                id="is_processed-1"
-                                                name="is_processed"
-                                                checked="checked"
-                                                formControlName="is_processed"
-                                                checked="checked"
-                                                value="0"
-                                                type="radio">
-                                            </mz-radio-button-container>
-                                          
-                                            <mz-radio-button-container>
-                                              <input mz-radio-button
-                                                [label]="'Да'"
-                                                id="is_processed-2"
-                                                name="is_processed"
-                                                formControlName="is_processed"
-                                                
-                                                value="1"
-                                                type="radio">
-                                            </mz-radio-button-container>
-          
-                                                                
-                              </div>
-                          </div>
-                          <div class="col s12 m4 l4">
-                              <div>Доп. продажа?</div>
-                              <div class="flex-block">
-          
-                                      <mz-radio-button-container>
-                                              <input mz-radio-button
-                                                [label]="'Нет'"
-                                                id="is_add_sale-1"
-                                                name="is_add_sale"
-                                                checked="checked"
-                                                formControlName="is_add_sale"
-                                                checked="checked"
-                                                value="0"
-                                                type="radio">
-                                            </mz-radio-button-container>
-                                          
-                                            <mz-radio-button-container>
-                                              <input mz-radio-button
-                                                [label]="'Да'"
-                                                id="is_add_sale-2"
-                                                name="is_add_sale"
-                                                formControlName="is_add_sale"
-                                                value="1"
-                                                type="radio">
-                                            </mz-radio-button-container>
-                              </div>
-                          </div>
-                          <div class=" col s12 m4 l4">
-                              <div>Курьерская доставка?</div>
-                              <div class="flex-block">
-          
-          
-                                      <mz-radio-button-container>
-                                              <input mz-radio-button
-                                                [label]="'Нет'"
-                                                id="is_express_delivery-1"
-                                                name="is_express_delivery"
-                                                checked="checked"
-                                                formControlName="is_express_delivery"
-                                                checked="checked"
-                                                value="0"
-                                                type="radio">
-                                            </mz-radio-button-container>
-                                          
-                                            <mz-radio-button-container>
-                                              <input mz-radio-button
-                                                [label]="'Да'"
-                                                id="is_express_delivery-2"
-                                                name="is_express_delivery"
-                                                formControlName="is_express_delivery"
-                                                value="1"
-                                                type="radio">
-                                            </mz-radio-button-container>
-          
-                              
-                              </div>
-                          </div>
-                      </div>
-                      <div class="row">
-                          <div class="input-field col s12">
-                              <textarea formControlName="text" id="text"  class="materialize-textarea"></textarea>
-                              <label for="text">Комментарий</label>
-                          </div>
-                      </div>
-
-                      <button [disabled]="form.invalid" class="btn waves-effect waves-light" type="submit" name="action">Сохранить
-                          <i class="material-icons right">send</i>
-                      </button>
-                      <button mz-button [flat]="true" mz-modal-close>Отмена</button>
-                      
-              </div>
-          </form>
-
-      
       
       <div class="row">
 
