--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -34,8 +34,6 @@
 
                     </div>
 
-
-
                   <mz-card *ngFor="let lead of nLeads | newLead:leadProcess:leadExpress; let i = index"
                         [ngClass]="{'card' : true, 'card-lead' : true, 'blue-grey' : true, 'darken-1' : true, 'white-text' : true, 'green': lead.is_processed, 'blue-grey' : !lead.is_processed}"
                         [horizontal]="true"
@@ -74,9 +72,79 @@
               </div>
               <div class="item">
                   <h4 class="center-align leads-title">В работе</h4>
+                  <mz-card *ngFor="let lead of processingLeads; let i = index"
+                        [ngClass]="{'card' : true, 'card-lead' : true, 'blue-grey' : true, 'darken-1' : true, 'white-text' : true, 'green': lead.is_processed, 'blue-grey' : !lead.is_processed}"
+                        [horizontal]="true"
+                        [hoverable]="true"
+                        (click)="openHistory($event, lead, i, processingLeads )"
+                        >
+                        
+                        <mz-card-content class="white-text">
+                            <p class="card-content__comments">({{lead.count_create}}) <span class="clip">{{lead.lastComment}}</span></p>
+
+                            <a
+                                    class="lead-link white-text lighten-3"
+                                    [href]="lead.link ? lead.link : 'tel:lead.phone'"
+                                    [target]=" lead.link ? '_blanck' : ''">
+                                {{ lead.link ? lead.link : lead.phone }}
+                            </a>
+                            <div class="flex-block content-between items-center">
+                                <div class="lead__source">
+                                <span class="lead__source-icon">
+                                    
+                                </span>
+                                    <span class="lead__source-title">{{ lead.source_title }}</span>
+                                    
+                                </div>
+                                    
+                                <div
+                                    class="lead__unit-title"
+                                    
+                                    [style]="{backgroundColor:lead.unit_color}"
+                                >{{ lead.unit_title }}
+                                </div>
+                            </div>
+                        </mz-card-content>
+                        
+                    </mz-card>
               </div>
               <div class="item">
                   <h4 class="center-align leads-title">Выполнено</h4>
+                  <mz-card *ngFor="let lead of dLeads; let i = index"
+                        [ngClass]="{'card' : true, 'card-lead' : true, 'blue-grey' : true, 'darken-1' : true, 'white-text' : true, 'green': lead.is_processed, 'blue-grey' : !lead.is_processed}"
+                        [horizontal]="true"
+                        [hoverable]="true"
+                        (click)="openHistory($event, lead, i, dLeads)"
+                        >
+                        
+                        <mz-card-content class="white-text">
+                            <p class="card-content__comments">({{lead.count_create}}) <span class="clip">{{lead.lastComment}}</span></p>
+
+                            <a
+                                    class="lead-link white-text lighten-3"
+                                    [href]="lead.link ? lead.link : 'tel:lead.phone'"
+                                    [target]=" lead.link ? '_blanck' : ''">
+                                {{ lead.link ? lead.link : lead.phone }}
+                            </a>
+                            <div class="flex-block content-between items-center">
+                                <div class="lead__source">
+                                <span class="lead__source-icon">
+                                    
+                                </span>
+                                    <span class="lead__source-title">{{ lead.source_title }}</span>
+                                    
+                                </div>
+                                    
+                                <div
+                                    class="lead__unit-title"
+                                    
+                                    [style]="{backgroundColor:lead.unit_color}"
+                                >{{ lead.unit_title }}
+                                </div>
+                            </div>
+                        </mz-card-content>
+                        
+                    </mz-card>
               </div>
           </owl-carousel>
         </div>
